--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <img src="service-2.png" class="card-img-top" alt="Service 2 Icon">
               <div class="card-body">
                 <h3 class="card-title">Marcação de Obras</h3>
-                <p class="card-text">Oferecemos serviço de marcação de obras para asegurar que o seu projeto está de acordo com os seus planos.</p>
+                <p class="card-text">Oferecemos serviço de marcação de obras para assegurar que o seu projeto está de acordo com os seus planos.</p>
               </div>
             </div>
           </div>
